(9/30) Filled in structs for monsters, events, and added event type to PC struct. Added variables in dungeon to store number of monsters and array of monsters. Added method gen_monsters to generate given number of monsters.
(9/30) Added checks for --nummon switch
(10/1) Added new_event function, get_room function. Filled in get_room, began work on implementing gen_monsters and new_event. Need to figure out how to use events.
(10/2) Added check statement to see if there is a character at some given position, currently it is broken, need to cast to int.
(10/2) implemented gen_monsters, should be done.
(10/3) Code almost done, need to fix gen_monsters so it is not putting monsters on top of each other, fixed new event, removed event variable from character struct
(10/4) Finished rough version of 1.04, not completely implemented but working.
(10/6) Began work on ncurses
(10/8) Added skeleton code for scanning input for ncurses
(10/8) Tested ncurses to get familiar with functionality
(10/9) Began working on PC movement
(10/10) Assignment pushed back, yooo
(10/13) Finished PC movement, begin working on monster list
(10/15) Added stair types and code to generate stairs
(10/15) troubleshooting stair generation
(10/16) Fix bug with monster list, each monster is the same
(10/17) Finished monster list, working on stairs
(10/18) Some stuff missing, monster list shows actual position, no stairs
(10/18) Fixed monster list, position is now relative to PC, still no stairs
(10/21) Cloned Professor's solution, begin reading about c++ conversion
(10/22) Convered all .c to .cpp files, begin fixing compile errors
(10/23) Fixing more compile errors
(10/24) I can get the code to compile and run with the new cpp extension, but I have to remove the W flags, fix?
(10/25) Left make file without w flags. Giving up on fog of war. Can't figure out solution.
(11/4) Created item class to store instanciated objects. Begin implementing items