@@ -4,12 +4,12 @@ ECHO = echo
 RM = rm -f
 
 CFLAGS = -Wall -Werror -ggdb3 -funroll-loops
-CXXFLAGS = -ggdb3 -funroll-loops -std=c++11
+CXXFLAGS = -Wall -Werror -ggdb3 -funroll-loops -std=c++11
 LDFLAGS = -lncurses
 
 BIN = rlg327
 OBJS = rlg327.o heap.o dungeon.o path.o utils.o pc.o dice.o \
-       npc.o move.o event.o character.o io.o descriptions.o item.o
+       npc.o move.o event.o character.o io.o descriptions.o 
 
 all: $(BIN) etags
 
