@@ -6,6 +6,7 @@ class dungeon;
 void io_init_terminal(void);
 void io_reset_terminal(void);
 void io_display(dungeon *d);
+void io_display_no_fog(dungeon *d);
 void io_handle_input(dungeon *d);
 void io_queue_message(const char *format, ...);
 
